experiment/meeting/071424/conti_scale_d3/conti_scale_d3_disclapuelltwo_n19200_priv1.out
  File "/home1/jongminm/LDPUts/experiment/meeting/071424/conti_scale_d3/conti_scale_d3_disclapuelltwo_n19200_priv1.py", line 37
    print("db insert success")device = torch.device('cpu' if torch.cuda.is_available() else 'cuda')
                                   ^
SyntaxError: invalid syntax
